Revision history for App-Pocoirc

{{$NEXT}}
    - Fix the interactive help message, it implied that commas weren't
      needed in lists
    - ReadLine.pm: Only restore stdio when we have been unregistered from
      all IRC components

0.42  Thu Apr 28 22:45:16 GMT 2011
    - Fix the same exec() problem as in the previous release, this time under
      --daemonize, because we were closing STDOUT/STDERR before redirecting
      them, which is not good.

0.41  Thu Apr 28 21:32:16 GMT 2011
    - Log it if we fail to log in due to a bad nickname
    - Decode any IRC strings before printing them under --trace
    - Enabling 'verbose' in --interactive after startup wasn't working
    - Fix output encoding in a few spots
    - POE::Wheel::Run with an exec()'d child was failing under --interactive

0.40  Wed Apr 27 05:50:35 GMT 2011
    - Oops. Didn't avoid custom stringification everywhere. Fixed.
    - Allow command-line option bundling, e.g. -itv instead of -i -t -v

0.39  Wed Apr 27 03:32:46 GMT 2011
    - Fix missing name for numeric 001 under --trace. Also depend on
      IRC::Utils 0.07 for even more numeric names.
    - Avoid custom stringifications when dumping objects with --trace

0.38  Tue Apr 26 22:03:37 GMT 2011
    - Replace status callbacks with irc_plugin_status events
    - Send an irc_network event when the network name changes
    - Enabling tracing in --interactive after startup wasn't working

0.37  Mon Apr 25 23:59:48 GMT 2011
    - Preserve symlinks in all supplied filenames
    - When using --trace, print the name (e.g. ERR_NICKNAMEINUSE) of every
      numberic event
    - Rename -i/--ircname to -r/--realname
    - Quit messages were not getting delivered to IRC servers. Fixed.
    - Add -i/--interactive which allows the user to call methods from
      the command line. Depend on POE 1.310 and POE::Component::IRC 6.61
      for related bugfixes, as well as Data::Dump for dumping return
      values of method calls.
