@@ -151,7 +151,7 @@ sub S_isupport {
     my $network  = $isupport->isupport('NETWORK');
     $self->_event_debug($irc, 'S_isupport', \@_) if $self->{Trace};
 
-    if (!defined $self->{Dynamic} && defined $network && length $network) {
+    if (!$self->{Dynamic} && defined $network && length $network) {
         $irc->send_event_next('irc_network', $network);
     }
     return PCI_EAT_NONE;
