@@ -5,6 +5,8 @@ Revision history for App-Pocoirc
       needed in lists
     - ReadLine.pm: Only restore stdio when we have been unregistered from
       all IRC components
+    - The network name in the ReadLine UI wasn't getting updated when
+      running without a configuration file
 
 0.42  Thu Apr 28 22:45:16 GMT 2011
     - Fix the same exec() problem as in the previous release, this time under
